# Password-Hashing-Rust

./: .gitignore  Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: build.rs  dump_hashes.rs  gen_hashes.rs  gen_passwords.rs  main.rs
core/: Cargo.toml
core/src/: args.rs  lib.rs  utility.rs
