[package]
name = "hashassin"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.33", features = ["derive"] }

# workspace dependency
hashassin-core = { path = "../core" }
hex = "0.4.3"
md-5 = "0.10.6"
rand = "0.9.0"
scrypt = "0.11.0"
sha2 = "0.10.8"
sha3 = "0.10.8"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }